<resources>
    <!-- General Strings -->
    <string name="app_name">App Mobile</string>
    <string name="btnback_text">Atrás</string>


    <!-- activity_actualizacion_de_clientes Strings -->
    <string name="activity_actualizacioncl_title">Actualizar Clientes</string>
    <string name="username_label_text">Nombre de usuario*</string>
    <string name="username_textbox_text">Juana Ramirez</string>
    <string name="password_label_text">Contraseña *</string>
    <string name="password_textbox_text">**********</string>
    <string name="mail_label_text">Correo *</string>
    <string name="mail_textbox_text">juana@hotmail.com</string>
    <string name="phone_label_text">Teléfono *</string>
    <string name="departamento_label_text">Departamento*</string>
    <string name="departamento_textbox_text">Bogota</string>
    <string name="municipio_label_text">Municipio*</string>
    <string name="municipio_textbox_text">Bogota</string>
    <string name="direccion_label_text">Dirección*</string>
    <string name="btnActualizar">Actualizar</string>

    <!-- activity_carrito Strings -->
    <string name="activity_carrito_title">Carrito</string>
    <string name="direccion_de_envio_label_text">Dirección de Envío</string>
    <string name="direccion_de_envio_text">Ac. 32 #17 – 30</string>
    <string name="barrio_de_envio_label_text">Teusaquillo</string>
    <string name="ciudad_de_envio_label_text">Bogotá</string>
    <string name="resumen_de_compra_label_text">Resumen de Compra</string>
    <string name="subtotal_label_text">Subtotal</string>
    <string name="subtotal_amount_text">$290.000</string>
    <string name="costo_envio_label_text">Envío</string>
    <string name="costo_envio_amount_text">$25.000</string>
    <string name="total_label_text">Total</string>
    <string name="btnpay_text">Pagar</string>
    <string name="total_amount_text">$315.000</string>

    <!-- activity_compra Strings -->
    <string name="activity_compra_title">Productos</string>
    <string name="vector_hoodie_desc">Hoodies</string>
    <string name="hoodie_label_text">Hoodies</string>
    <string name="vector_snapback_desc">Snapback</string>
    <string name="snapback_label_text">Snapback</string>
    <string name="vector_camiseta_desc">Camisetas</string>
    <string name="camiseta_label_text">Camisetas</string>
    <string name="vector_tenis_desc">Tenis</string>
    <string name="tenis_label_text">Tenis</string>
    <string name="btncarrito_desc">Carrito</string>

    <!-- activity_creacion_de_productos Strings -->
    <string name="activity_creacion_pd_title">Creación de Productos</string>
    <string name="nombre_pd_label_text">Nombre</string>
    <string name="categoria_pd_label_text">Categoría</string>
    <string name="precio_pd_label_text">Precio</string>
    <string name="descripcion_pd_label_text">Descripción</string>
    <string name="cantidad_pd_label_text">Cantidad</string>
    <string name="talla_pd_label_text">Talla</string>
    <string name="color_pd_label_text">Color</string>
    <string name="color_pd_text">Rojo</string>
    <string name="imagen_pd_desc">Vista previa imagen</string>
    <string name="btnseleccionar_text">Seleccionar</string>
    <string name="btncrear_pd_text">Crear Producto</string>

    <!-- activity_detalle_producto Strings -->
    <string name="titulo_detalle_pd_text">Hoodie Flamas</string>
    <string name="precio_detalle_pd_text">$170.000</string>
    <string name="talla_detalle_pd_text">Talla</string>
    <string name="talla_s_detalle_pd_text">S</string>
    <string name="talla_m_detalle_pd_text">M</string>
    <string name="talla_l_detalle_pd_text">L</string>
    <string name="talla_xl_detalle_pd_text">XL</string>
    <string name="talla_2xl_detalle_pd_text">2XL</string>
    <string name="color_detalle_pd_label">Color</string>
    <string name="color_detalle_pd_text">Rojo</string>
    <string name="cantidad_detalle_pd_label">Cantidad</string>
    <string name="btndisminuir_cantidad_text">Disminuir</string>
    <string name="btnaumentar_cantidad_text">Aumentar</string>
    <string name="descripcion_detalle_pd_label">Descripción</string>
    <string name="descripcion_detalle_pd_text">Hoodie estilo hip hop con estampados gráficos en llamas y letras urbanas, ideal para un look callejero y atrevido.</string>
    <string name="btnagregarCarrito_label">Agregar al Carrito</string>

    <!-- activity_editar_producto Strings -->
    <string name="activity_editar_productos">Editar Producto</string>
    <string name="nombre_editar_pd_label">Nombre</string>
    <string name="categoria_editar_pd_label">Categoría</string>
    <string name="precio_editar_pd_label">Precio</string>
    <string name="descripcion_editar_pd_label">Descripción</string>
    <string name="cantidad_editar_pd_label">Cantidad</string>
    <string name="talla_editar_pd_label">Talla</string>
    <string name="color_editar_pd_label">Color</string>
    <string name="color_editar_pd_text">Rojo</string>
    <string name="imagen_editar_pd_desc">Vista previa imagen</string>
    <string name="btnseleccionar_editar_pd_text">Seleccionar</string>
    <string name="btnguardar_cambios_editar_pd_text">Guardar Cambios</string>

    <!-- activity_item_carrito Strings -->
    <string name="titulo_pd_item_carrito">Hoodie Flama</string>
    <string name="talla_pd_item_carrito_label">Talla:</string>
    <string name="talla_pd_item_carrito_text">S</string>
    <string name="color_pd_item_carrito_label">Color:</string>
    <string name="color_pd_item_carrito_text">Azul y blanco</string>
    <string name="btndisminuir_cantidad_item_carrito_text">Disminuir</string>
    <string name="btnaumentar_cantidad_item_carrito_text">Aumentar</string>
    <string name="precio_pd_item_carrito_text">$170.000</string>
    <string name="btneliminar_item_carrito_text">Eliminar</string>
    <string name="precio_unitario_item_carrito_label">Precio unitario:</string>
    <string name="precio_unitario_item_carrito_text">$170.000</string>

    <!-- activity_lista_de_producto Strings -->
    <string name="btnagregar_lista_producto">Agregar</string>
    <string name="activity_lista_de_producto">Lista de Producto</string>

    <!-- activity_login Strings -->
    <string name="activity_login">Iniciar Sesión</string>
    <string name="usuario_login_label">Usuario</string>
    <string name="usuario_login_text">Esther Howard</string>
    <string name="contrasenia_login_label">Contraseña</string>
    <string name="contrasenia_login_text">HJ@#9783kja</string>
    <string name="olvidar_contrasenia_login_label">Olvidé la contraseña</string>
    <string name="btningresar_login_label">Ingresar</string>

    <!-- activity_mapa Strings -->
    <string name="activity_mapa">Selección de Ubicación</string>
    <string name="radiobtn_domicilio_label">Domicilio</string>
    <string name="radiobtn_recoger_tienda_label">Recoger en Tienda</string>
    <string name="ubicacion_label">Ingrese su ubicación</string>
    <string name="ubicacion_text">[Ubicación seleccionada en el mapa]</string>
    <string name="btnaceptar_label">Aceptar</string>
    <string name="btncancelar_label">Cancelar</string>



    <!-- activity_olvidar_contrasenia Strings -->
    <string name="ingresar_correo_olvidar_contrasenia_label">Ingrese su correo electrónico</string>
    <string name="ingresar_correo_olvidar_contrasenia_text">Correo</string>
    <string name="btncancelar_olvidar_contrasenia_label">Cancelar</string>
    <string name="btnrestablecer_olvidar_contrasenia_label">Restablecer Contraseña</string>

    <!-- activity_perfil_de_usuario Strings -->
    <string name="imagen_camara_perfil_usuario_desc">Cambiar de Imagen de Perfil</string>
    <string name="nombre_usuario_perfil_usuario_label">Juana</string>
    <string name="apellido_usuario_perfil_usuario_label">Ramírez</string>
    <string name="btneditar_datos_perfil_usuario_label">Editar Datos</string>
    <string name="btnproductos_perfil_usuario_label">Productos</string>
    <string name="btneliminar_cuenta_perfil_usuario_label">Eliminar Cuenta</string>
    <string name="btncomprar_perfil_usuario_label">Comprar</string>
    <string name="lista_pedidos_perfil_usuario_label">Lista de Pedidos</string>
    <string name="busqueda_perfil_usuario_label">Busqueda</string>

    <!-- activity_registro_de_clientes Strings -->
    <string name="activity_registro_de_clientes">Registro de Clientes</string>
    <string name="usuario_registro_de_clientes_label">Nombre de Usuario*</string>
    <string name="contrasenia_registro_de_clientes_label">Contraseña*</string>
    <string name="correo_registro_de_clientes_label">Correo *</string>
    <string name="telefono_registro_de_clientes_label">Telefono*</string>
    <string name="departamento_registro_de_clientes_label">Departamento *</string>
    <string name="municipio_registro_de_clientes_label">Municipio *</string>
    <string name="direccion_registro_de_clientes_label">Dirección *</string>
    <string name="btnregistar_registro_de_clientes_label">Registrar</string>


    <!-- activity_splash Strings -->
    <string name="app_title">Cypher</string>

    <!-- activity_welcome Strings -->
    <string name="btnlogin_text">Iniciar Sesión</string>
    <string name="btnregistrarse_text">Registrarse</string>

    <!-- dialog_confirm_action Strings -->
    <string name="confirmacion_dialog_confirm_label">¿Desea crear el [nombre_producto]?</string>
    <string name="btnclose_dialog_confirm_label">Cerrar</string>
    <string name="btnno_dialog_confirm_label">No</string>
    <string name="btnsi_dialog_confirm_label">Sí</string>

    <!-- item_order Strings -->
    <string name="fecha_pedido_item_order_text">2025/01/10</string>
    <string name="pedido_item_order_label">Pedido No.</string>
    <string name="order_number_item_order_text">213541</string>
    <string name="product_item_order_text">Hoodie Carmesí</string>
    <string name="precio_item_order_text">100.000</string>

    <!-- item_product Strings -->
    <string name="product_item_product_label">Hoodie Carmesí</string>
    <string name="precio_item_product_label">$130.000</string>
    <string name="order_item_item_product_text">001</string>

    <!-- item_product_admin Strings -->
    <string name="product_item_product_admin_text">Hoodie Legend 2Pac</string>
    <string name="btneditar_item_product_admin_desc">Editar</string>
    <string name="btnborrar_item_product_admin_desc">Borrar</string>


</resources>